// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioBorderedBox renders correctly 1`] = `
<DocumentFragment>
  .cache-1l5bs5y {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
}

.cache-1l5bs5y.cache-1l5bs5y {
  display: block;
}

.cache-1l5bs5y:hover {
  cursor: pointer;
}

.cache-h0rkxm.cache-h0rkxm {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.cache-dt36sk {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
  height: 32px;
  cursor: pointer;
}

.cache-dt36sk.cache-dt36sk {
  margin-right: 4px;
}

.cache-dt36sk:hover .e1duuirp2,
.cache-dt36sk:focus .e1duuirp2 {
  background-color: rgba(220,225,235,0.25);
  border-radius: 50%;
}

.cache-dt36sk:hover .e1duuirp2>.e1duuirp3,
.cache-dt36sk:focus .e1duuirp2>.e1duuirp3 {
  fill: #4f0599;
}

.cache-kwm2j4 {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-ldqu23 {
  fill: #dce1eb;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-ldqu23.cache-ldqu23 {
  vertical-align: middle;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-1sg0ylu.cache-1sg0ylu {
  margin-right: 8px;
}

<div
    class="e13z6rra0 cache-1l5bs5y e7ah3bn0"
  >
    <div
      class="cache-h0rkxm e7ah3bn0"
    >
      <label
        class="e1duuirp1 cache-dt36sk e7ah3bn0"
        for="radio-choice"
      >
        <div
          class="e1duuirp2 cache-kwm2j4 e7ah3bn0"
        >
          <svg
            class="e1duuirp3 etwatq50 cache-ldqu23 e7ah3bn0"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
            />
          </svg>
        </div>
        Choice
        <input
          aria-checked="false"
          class="cache-cujed6 e1duuirp0"
          id="radio-choice"
          name="radio"
          tabindex="0"
          type="radio"
          value="choice"
        />
      </label>
      <span
        class="cache-1sg0ylu e7ah3bn0"
      />
    </div>
    <div>
      Choice description
    </div>
  </div>
</DocumentFragment>
`;

exports[`RadioBorderedBox renders correctly when checked 1`] = `
<DocumentFragment>
  .cache-my9iyn {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  border: 1px solid #4f0599!important;
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-my9iyn.cache-my9iyn {
  display: block;
}

.cache-my9iyn:hover {
  cursor: pointer;
}

.cache-h0rkxm.cache-h0rkxm {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.cache-dt36sk {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
  height: 32px;
  cursor: pointer;
}

.cache-dt36sk.cache-dt36sk {
  margin-right: 4px;
}

.cache-dt36sk:hover .e1duuirp2,
.cache-dt36sk:focus .e1duuirp2 {
  background-color: rgba(220,225,235,0.25);
  border-radius: 50%;
}

.cache-dt36sk:hover .e1duuirp2>.e1duuirp3,
.cache-dt36sk:focus .e1duuirp2>.e1duuirp3 {
  fill: #4f0599;
}

.cache-kwm2j4 {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-kptj9p {
  fill: #4f0599;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-kptj9p.cache-kptj9p {
  vertical-align: middle;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-1sg0ylu.cache-1sg0ylu {
  margin-right: 8px;
}

<div
    class="e13z6rra0 cache-my9iyn e7ah3bn0"
  >
    <div
      class="cache-h0rkxm e7ah3bn0"
    >
      <label
        class="e1duuirp1 cache-dt36sk e7ah3bn0"
        for="radio-choice"
      >
        <div
          class="e1duuirp2 cache-kwm2j4 e7ah3bn0"
        >
          <svg
            class="e1duuirp3 etwatq50 cache-kptj9p e7ah3bn0"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,7A5,5 0 0,0 7,12A5,5 0 0,0 12,17A5,5 0 0,0 17,12A5,5 0 0,0 12,7Z"
            />
          </svg>
        </div>
        Choice
        <input
          aria-checked="true"
          checked=""
          class="cache-cujed6 e1duuirp0"
          id="radio-choice"
          name="radio"
          tabindex="0"
          type="radio"
          value="choice"
        />
      </label>
      <span
        class="cache-1sg0ylu e7ah3bn0"
      />
    </div>
    <div>
      Choice description
    </div>
  </div>
</DocumentFragment>
`;

exports[`RadioBorderedBox renders correctly when disabled 1`] = `
<DocumentFragment>
  .cache-2w7h54 {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  cursor: not-allowed!important;
  color: #dce1eb;
}

.cache-2w7h54.cache-2w7h54 {
  display: block;
}

.cache-2w7h54:hover {
  cursor: pointer;
}

.cache-h0rkxm.cache-h0rkxm {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.cache-1382gvk {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
  height: 32px;
  cursor: pointer;
  color: #dce1eb;
  cursor: not-allowed;
}

.cache-1382gvk.cache-1382gvk {
  margin-right: 4px;
}

.cache-kwm2j4 {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-ldqu23 {
  fill: #dce1eb;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-ldqu23.cache-ldqu23 {
  vertical-align: middle;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-1sg0ylu.cache-1sg0ylu {
  margin-right: 8px;
}

<div
    class="e13z6rra0 cache-2w7h54 e7ah3bn0"
    disabled=""
  >
    <div
      class="cache-h0rkxm e7ah3bn0"
    >
      <label
        class="e1duuirp1 cache-1382gvk e7ah3bn0"
        disabled=""
        for="radio-choice"
      >
        <div
          class="e1duuirp2 cache-kwm2j4 e7ah3bn0"
        >
          <svg
            class="e1duuirp3 etwatq50 cache-ldqu23 e7ah3bn0"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
            />
          </svg>
        </div>
        Choice
        <input
          aria-checked="false"
          aria-disabled="true"
          class="cache-cujed6 e1duuirp0"
          disabled=""
          id="radio-choice"
          name="radio"
          style="pointer-events: none;"
          type="radio"
          value="choice"
        />
      </label>
      <span
        class="cache-1sg0ylu e7ah3bn0"
      />
    </div>
    <div>
      Choice description
    </div>
  </div>
</DocumentFragment>
`;

exports[`RadioBorderedBox renders correctly with label desc and badge 1`] = `
<DocumentFragment>
  .cache-2w7h54 {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  cursor: not-allowed!important;
  color: #dce1eb;
}

.cache-2w7h54.cache-2w7h54 {
  display: block;
}

.cache-2w7h54:hover {
  cursor: pointer;
}

.cache-h0rkxm.cache-h0rkxm {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.cache-1382gvk {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
  height: 32px;
  cursor: pointer;
  color: #dce1eb;
  cursor: not-allowed;
}

.cache-1382gvk.cache-1382gvk {
  margin-right: 4px;
}

.cache-kwm2j4 {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-ldqu23 {
  fill: #dce1eb;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-ldqu23.cache-ldqu23 {
  vertical-align: middle;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-1sg0ylu.cache-1sg0ylu {
  margin-right: 8px;
}

.cache-12dkvvj {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: #ef5774;
  color: #fff;
  font-size: 12px;
  line-height: 24px;
  height: 24px;
}

<div
    class="e13z6rra0 cache-2w7h54 e7ah3bn0"
    disabled=""
  >
    <div
      class="cache-h0rkxm e7ah3bn0"
    >
      <label
        class="e1duuirp1 cache-1382gvk e7ah3bn0"
        disabled=""
        for="radio-choice"
      >
        <div
          class="e1duuirp2 cache-kwm2j4 e7ah3bn0"
        >
          <svg
            class="e1duuirp3 etwatq50 cache-ldqu23 e7ah3bn0"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
            />
          </svg>
        </div>
        Choice
        <input
          aria-checked="false"
          aria-disabled="true"
          class="cache-cujed6 e1duuirp0"
          disabled=""
          id="radio-choice"
          name="radio"
          style="pointer-events: none;"
          type="radio"
          value="choice"
        />
      </label>
      <span
        class="cache-1sg0ylu e7ah3bn0"
      >
        (something)
      </span>
      <span
        class="egvl2gp0 cache-12dkvvj e7ah3bn0"
      >
        Badge
      </span>
    </div>
    <div>
      Choice description
    </div>
  </div>
</DocumentFragment>
`;
